[gd_scene load_steps=34 format=3 uid="uid://cq8fbkkwauxoo"]

[ext_resource type="Script" path="res://Scripts/Game/player.gd" id="1_s0uo2"]
[ext_resource type="Texture2D" uid="uid://dgo7fp55j5bmt" path="res://Assets/Images/Player/kratos_by_wrriter_d2wrdvq-fullview.png" id="2_87jvl"]
[ext_resource type="Texture2D" uid="uid://be0jxocrlx0v4" path="res://Assets/Images/Player/cutAnimation.png" id="3_m0ngc"]
[ext_resource type="Texture2D" uid="uid://dq86388qxvwk" path="res://Assets/Images/Player/axe_spin_spritesheet.png" id="4_n0xky"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dbqgp"]
atlas = ExtResource("2_87jvl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvvc7"]
atlas = ExtResource("2_87jvl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1nr1"]
atlas = ExtResource("2_87jvl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pmey"]
atlas = ExtResource("2_87jvl")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6vsi"]
atlas = ExtResource("2_87jvl")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8642q"]
atlas = ExtResource("2_87jvl")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j34hl"]
atlas = ExtResource("2_87jvl")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0on47"]
atlas = ExtResource("2_87jvl")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pgjm"]
atlas = ExtResource("2_87jvl")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2k0w"]
atlas = ExtResource("2_87jvl")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbp3u"]
atlas = ExtResource("2_87jvl")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3p4u6"]
atlas = ExtResource("2_87jvl")
region = Rect2(64, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ddi15"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbqgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvvc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbqgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1nr1")
}],
"loop": true,
"name": &"Down",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pmey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6vsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pmey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8642q")
}],
"loop": true,
"name": &"Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j34hl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0on47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j34hl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pgjm")
}],
"loop": true,
"name": &"Right",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2k0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbp3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2k0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3p4u6")
}],
"loop": true,
"name": &"Up",
"speed": 7.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_taocq"]
atlas = ExtResource("3_m0ngc")
region = Rect2(0, 0, 209, 259)

[sub_resource type="AtlasTexture" id="AtlasTexture_18kcs"]
atlas = ExtResource("3_m0ngc")
region = Rect2(209, 0, 209, 259)

[sub_resource type="AtlasTexture" id="AtlasTexture_6edoi"]
atlas = ExtResource("3_m0ngc")
region = Rect2(418, 0, 209, 259)

[sub_resource type="AtlasTexture" id="AtlasTexture_7s2uy"]
atlas = ExtResource("3_m0ngc")
region = Rect2(627, 0, 209, 259)

[sub_resource type="AtlasTexture" id="AtlasTexture_7l0r1"]
atlas = ExtResource("3_m0ngc")
region = Rect2(836, 0, 209, 259)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytbvk"]
atlas = ExtResource("3_m0ngc")
region = Rect2(1045, 0, 209, 259)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgflb"]
atlas = ExtResource("4_n0xky")
region = Rect2(0, 0, 148, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_bohqw"]
atlas = ExtResource("4_n0xky")
region = Rect2(148, 0, 148, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_2p72t"]
atlas = ExtResource("4_n0xky")
region = Rect2(296, 0, 148, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1pda"]
atlas = ExtResource("4_n0xky")
region = Rect2(444, 0, 148, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_nel51"]
atlas = ExtResource("4_n0xky")
region = Rect2(592, 0, 148, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxnrf"]
atlas = ExtResource("4_n0xky")
region = Rect2(740, 0, 148, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_6n8n8"]
atlas = ExtResource("4_n0xky")
region = Rect2(888, 0, 148, 148)

[sub_resource type="AtlasTexture" id="AtlasTexture_5eptj"]
atlas = ExtResource("4_n0xky")
region = Rect2(1036, 0, 148, 148)

[sub_resource type="SpriteFrames" id="SpriteFrames_pwiwe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_taocq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18kcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6edoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7s2uy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l0r1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytbvk")
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"Atack",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgflb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bohqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2p72t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1pda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nel51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxnrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6n8n8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5eptj")
}],
"loop": false,
"name": &"Axe",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5b8iw"]
size = Vector2(32, 32)

[node name="Player" type="Node2D"]
script = ExtResource("1_s0uo2")

[node name="Animation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ddi15")
animation = &"Right"

[node name="CutAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 5.68434e-14)
scale = Vector2(0.241627, 0.241627)
sprite_frames = SubResource("SpriteFrames_pwiwe")
animation = &"Axe"

[node name="Body" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
shape = SubResource("RectangleShape2D_5b8iw")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="Body" to="." method="_on_body_area_entered"]
[connection signal="area_exited" from="Body" to="." method="_on_body_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
